- got rid of padding on mobile m - l buffer

--- a/index.css
+++ b/index.css
@@ -1078,6 +1078,10 @@ html {
   p .text-muted a {
     font-size: 1.1em !important;
   }
+
+  #nl-submit {
+    padding-right: 30px;
+  }
 }
 
 /* Mobile L */
