--- a/index.css
+++ b/index.css
@@ -1078,10 +1078,6 @@ html {
   p .text-muted a {
     font-size: 1.1em !important;
   }
-
-  #nl-submit {
-    padding-right: 30px;
-  }
 }
 
 /* Mobile L */
@@ -1428,7 +1424,11 @@ html {
 }
 
 /* Tablet - Laptop Buffer*/
-@media only screen and (min-width: 770px) {}
+@media only screen and (min-width: 770px) {
+  #nl-submit {
+    padding-right: 30px;
+  }
+}
 
 /* Laptop */
 @media only screen and (min-width: 970px) {
