--- a/index.css
+++ b/index.css
@@ -20,7 +20,6 @@ html {
   border-bottom: 0 !important;
   border-right: 0 !important;
   border-radius: 0 !important;
-  /* padding-right: 20px; */
 }
 
 .card-body {
@@ -88,7 +87,6 @@ html {
 }
 
 #service_title-lead::before {
-  /* background: rgb(255,255,255); */
   border-image: linear-gradient(90deg, transparent 0%, rgba(138, 208, 255, 1) 46%, rgba(0, 153, 255, 1) 100%) 1;
 }
 
@@ -203,10 +201,6 @@ html {
   background-color: white;
 }
 
-/* .navbar-toggler.collapsed{
-  border: 0 !important;
-} */
-
 .navbar-brand {
   color: white;
   font-size: 35px !important;
@@ -300,14 +294,6 @@ html {
   border-color: #0383d9;
 }
 
-
-
-/* Selects SVG inside svg continer allowing for semi responsive svgs - WORKS */
-/* .svg-container svg {
-  max-width: 100%;
-  max-height: 100%;
-} */
-
 #jumbo_emailform {
   background-color: white;
   /* display: block; */
@@ -370,10 +356,6 @@ html {
   margin-bottom: 3%;
 }
 
-/* .owl-dots .owl-dot .active {
-
-} */
-
 .testcard-text {
   transform: translateY(-15%);
   font-size: .9em;
@@ -400,6 +382,7 @@ html {
 }
 
 .social-icons:hover {
+  filter: brightness(70%);
   -webkit-filter: brightness(70%);
   -webkit-transition: filter .3s ease-in-out;
   -moz-transition: filter .3s ease-in-out;
@@ -407,18 +390,6 @@ html {
   -ms-transition: filter .3s ease-in-out;
   transition: filter .3s ease-in-out;
 }
-
-/* #nl-emailarea{
-  border-radius: 0;
-} */
-
-/* #footer-contact--soctitle{
-  font-size: 1em;
-  font-family: Arial, Helvetica, sans-serif !important;
-  font-weight: bold;
-} */
-
-
 
 
 
@@ -463,10 +434,8 @@ html {
   #jumbo_emailform {
     right: 0;
     position: absolute;
-    /*May change when adding child elements */
     width: 250px;
     height: 460px;
-    /*May change when adding child elements */
     left: 50%;
     top: 75%;
     transform: translate(-50%, -50%);
@@ -474,8 +443,6 @@ html {
     margin-top: 0;
     bottom: 0;
     text-align: center;
-    /*Test for dots*/
-    /* opacity: 50%; */
   }
 
   .jumboef--input {
@@ -782,13 +749,11 @@ html {
   #jumbo_title {
     color: rgb(255, 255, 255);
     font-size: 28px;
-    /* line-height: 40px; */
     font-style: normal;
     letter-spacing: 0px;
     text-align: center;
     padding: 0;
     margin-top: 75px;
-    /* margin: 0; */
   }
 
   .navbar-brand {
@@ -1055,52 +1020,6 @@ html {
 }
 
 
-/* #footer-contact--soctitle{
-    font-size: 1em;
-    font-family: Arial, Helvetica, sans-serif !important;
-    font-weight: bold;
-    display: none;
-  } */
-
-/* #footer-contact--title {
-    font-size: 1.4em;
-    padding-bottom: 1.5%;
-    text-align: center;
-  }
-
-  #footer-contact--a1 {
-    font-size: 1em;
-    text-align: center;
-  }
-
-  #footer-contact--a2 {
-    font-size: 1em;
-    text-align: center;
-  }
-
-  #footer-contact--email {
-    font-size: 1em;
-    text-align: center;
-  }
-
-  #footer-ql--title {
-    font-size: 1em;
-    text-align: center;
-  }
-
-  #footer-about--title {
-    font-size: 1em;
-    text-align: center;
-  }
-
-  #footer-nl--title {
-    font-size: 1em;
-    text-align: center;
-  } */
-
-/* Samsung s22 ultra is in this category */
-
-
 /* Mobile M - L Buffer */
 @media only screen and (min-width: 360px) {
   .tes-item {
@@ -1168,11 +1087,6 @@ html {
   #nl-emailarea {
     max-width: 40%;
   }
-
-  /* .card-text{
-    width: 80%;
-    margin: 0 auto;
-  } */
 }
 
 
@@ -1489,10 +1403,6 @@ html {
   #footer-hr {
     margin-bottom: 1%;
   }
-
-  /* #footer-crtext{
-    padding-top: .5%;
-  } */
 
   .navbar-brand {
     font-size: 28px !important;
